1.9.0 - Source is now JDK 9+ compliant.